# traceless

./: .dockerignore  .env.example  .gitignore  .lemon-api-key  .lemon-webhook-secret  Dockerfile  README.md  ROADMAP.md  creditos.sql  fly.toml  migration.sql  package-lock.json  package.json  requirements.txt  schema.sql  vercel.json
api/: auth.py  clientes.py  db.py  facturas.py  health.py  index.py  main.py  pdf.py  whatsapp.py
app/: afip.py  auth.py  clientes.py  contact.py  creditos.py  db.py  email_sender.py  facturas.py  lemon.py  main.py  mercadopago.py  notifications.py  pdf.py  retry_queue.py  telegram_notify.py  whatsapp.py  whatsapp_templates.py  whatsapp_webhook.py
backend/: pyproject.toml
backend/api/: index.py
backend/app/: auth.py  main.py  pdf.py
extension/: manifest.json  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  robots.txt  service-worker.js  sitemap.xml
frontend/src/: App.tsx
public/: robots.txt  sitemap.xml
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/components/: ActionRecommendations.tsx  BatchDeletionModal.tsx  BreachCard.tsx  ExposureSummary.tsx  HeaderAuth.tsx  LetterModal.tsx  Logo.tsx  PasswordScanner.tsx  PremiumGate.tsx  ResultsDashboard.tsx  SearchForm.tsx  SecurityChecklist.tsx  Toast.tsx
src/data/: breaches.ts  brokers.ts
src/lib/: broker-search.ts  dark-web.ts  db.ts  elimination-verify.ts  lemonsqueezy.ts  letters.ts  limits.ts  (+7 more)
supabase/: schema.sql
(+52 files in other folders)
