[project]
name = "traceless-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "supabase",
    "pydantic",
    "python-dotenv",
    "httpx",
    "pyOpenSSL",
    "lxml",
    "requests",
    "zeep",
    "uvicorn[standard]",
]

[tool.vercel]
entrypoint = "api/index.py:app"
